--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
         <span class="c plusR">+</span>
       </div>
     </aside>
-    <button id="reset" type="button" name="reset">Reset</button>
     <aside id="work">
       <h2>Session Length</h2>
       <div class="controls">
@@ -41,8 +40,8 @@
          <feDropShadow dx="0" dy="0" stdDeviation="5"/>
        </filter>
       </defs>
-      <circle class="workRestTime" cx='150' cy='150' r='150'/>
-      <circle class="minutes" cx='150' cy='150' r='150'/>
+      <circle class="workRestTime runAnimation" cx='150' cy='150' r='150'/>
+      <circle class="minutes runAnimation" cx='150' cy='150' r='150'/>
       <circle class="inside" cx='150' cy='150' r='120'/>
       <text id="sessionLabel" x="150" y="-150" font-size="45" text-anchor="middle"></text>
       <text id="time" x="150" y="-90" font-size="45" text-anchor="middle"></text>
